test/conformance/chainsaw/generating-policies/apply-v1/source.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: source-namespace
