test/conformance/chainsaw/generating-policies/apply-v1/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: match-namespace-with-ns-selector
spec:
  concurrent: false
  steps:
    - name: create source namespace and secret
      try:
        - apply:
            file: source.yaml
    - name: create permissions
      try:
        - apply:
            file: permissions.yaml
    - name: create policy
      use:
        template: ../../_step-templates/create-policy.yaml
        with:
          bindings:
            - name: file
              value: policy.yaml
    - name: wait-generating-policy-ready
      use:
        template: ../../_step-templates/generating-policy-ready.yaml
        with:
          bindings:
            - name: name
              value: match-namespace-with-ns-selector
    - name: sleep
      try:
        - sleep:
            duration: 5s
    - name: create the trigger
      try:
        - apply:
            file: namespace.yaml
    - name: check that the secret is generated
      try:
        - assert:
            file: downstream-assert.yaml
    - name: delete the downstream
      try:
        - delete:
            ref:
              apiVersion: v1
              kind: Secret
              name: secret-name
              namespace: target-namespace
    - name: sleep
      try:
        - sleep:
            duration: 5s
    - name: check that the downstream is re-generated
      try:
        - assert:
            file: downstream-assert.yaml
